--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -16,7 +16,7 @@ gem 'coffee-rails', '~> 4.1.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
-gem 'jquery-ui-rails'
+# gem 'jquery-ui-rails'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -27,6 +27,7 @@ gem 'devise'
 gem 'cancan'
 gem 'unicorn'
 gem 'will_paginate'
+gem 'kaminari'
 gem 'bootstrap3-rails'
 gem 'role_model'
 gem 'redis'
@@ -34,6 +35,7 @@ gem 'redis-store'
 gem 'redis-namespace'
 gem 'redis-rails'
 gem 'redis-rack-cache'
+gem 'rails_admin'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
