--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -29,12 +29,12 @@ gem 'unicorn'
 gem 'will_paginate'
 gem 'kaminari'
 gem 'bootstrap3-rails'
-gem 'role_model'
-gem 'redis'
-gem 'redis-store'
-gem 'redis-namespace'
-gem 'redis-rails'
-gem 'redis-rack-cache'
+# gem 'role_model'
+# gem 'redis'
+# gem 'redis-store'
+# gem 'redis-namespace'
+# gem 'redis-rails'
+# gem 'redis-rack-cache'
 gem 'rails_admin'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
@@ -47,10 +47,9 @@ gem 'rails_admin'
 
 group :development do
   gem 'hirb'
-
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
-  gem 'mysql2'
+  # gem 'mysql2'
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
 
@@ -63,6 +62,8 @@ group :test do
 end
 
 group :production do
-  gem 'passenger'
+  gem 'puma'
+  gem 'pg'
+  # gem 'passenger'
 	# gem 'unicorn'
 end
