--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -41,13 +41,12 @@ test:
 
 production:
   <<: *default
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8 
-  database: db1aciouqmg6ai 
+  database: web 
   pool: 10
-  username: csvqnrykfkhhpx 
-  port: 5432
-  password: '983I4Z1dRcAfeA8J0XCkF6MMeI'
-  # socket: /opt/lampp/var/mysql/mysql.sock
+  username: root 
+  # password:''
+  socket: /opt/lampp/var/mysql/mysql.sock
   # socket: /var/run/mysqld/mysqld.sock 
   econnect: true
